--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,14 @@
   <title>Github-browser</title>
 </head>
 <body>
-
 <nav class="navbar">
   <div class="navbar-brand">
     <div class="navbar-item">
       <div class="field has-addons">
         <div class="control">
-          <input class="input username" type="text" placeholder="enter github username">
+          <input class="input username"
+                 type="text"
+                 placeholder="enter github username">
         </div>
         <div class="control">
           <button class="button is-info load-username">
@@ -19,21 +20,16 @@
         </div>
       </div>
     </div>
-
     <div class="navbar-item">
       <div class="loader is-hidden" id="spinner"></div>
     </div>
-
   </div>
 </nav>
 
-
 <div class="container">
-  <div class="columns is-1-tablet">
-    <div class="profile-container column is-one-third">
-
+  <div class="columns ">
+    <div class="profile-container column is-full-mobile is-half is-one-third-1280">
       <h2 class="subtitle is-4">Profile</h2>
-
       <div class="profile">
         <div class="media">
           <div class="media-left">
@@ -47,17 +43,16 @@
           </div>
         </div>
 
-
         <div class="content" id="profile-bio">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor
-            vestibulum ut.</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor
+            vestibulum ut.
+          </p>
         </div>
       </div>
     </div>
-
     <div class="events-container column">
       <h2 class="subtitle is-4">History</h2>
-
       <div class="timeline" id="user-timeline">
         <div class="timeline-item">
           <div class="timeline-marker"></div>
@@ -126,10 +121,8 @@
           </div>
         </div>
       </div>
-
     </div>
   </div>
 </div>
-
 </body>
 </html>
